Fix scrollbars in iframe

--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -3,6 +3,8 @@
 @import "variables";
 
 html {
+  overflow: hidden;
+
   body {
     font-size: 14px;
     margin: 0px;
